<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/help_rowView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true">


    <ImageView
        android:id="@+id/help_imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/help_imageView"
        android:layout_toRightOf="@+id/help_imageView"
        android:text="@string/title"
        android:textColor="@color/primary_text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/help_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_title"
        android:layout_toEndOf="@+id/help_imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/description"
        android:textColor="@color/primary_text" />

</RelativeLayout>