<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/discription"
            android:textColor="@color/three" />

        <EditText
            android:id="@+id/et_Discription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:inputType=""
            android:singleLine="true"
            android:textColor="@color/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/native_discription"
            android:textColor="@color/three" />

        <EditText
            android:id="@+id/et_native_discriptin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/counter"
            android:textColor="@color/three" />

        <TextView
            android:id="@+id/tv_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:singleLine="true"
            android:textColor="@color/three" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset_counter"
        android:textColor="@color/three" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/if_you_share_the_counter_do_not_forget_to_reset_the_counter"
        android:textColor="@color/three" />

    <!--<Button-->
        <!--android:id="@+id/sc"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/bgbtnguide"-->
        <!--android:text="@string/share_counter"-->
        <!--android:textColor="@android:color/white" />-->


</LinearLayout>