<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".notification.Notefication_Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="4dp"
        android:text="@string/help_text_on_how_to_use_the_reminder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/three" />

    <LinearLayout
        android:id="@+id/id1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:background="@drawable/line_square_gold"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="13dp"
            android:gravity="center"
            android:textColor="@color/three"
            android:textSize="20sp"
            tools:text="Set Time Interval" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="104dp"
            android:ems="10"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id1"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/startAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgbtnguide"
            android:text="@string/start_alarm_service"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/stopAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bgbtnguide"
            android:text="@string/stop_alarm"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/save_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bgbtnguide"
            android:text="@string/save_time"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <!--<Button-->
    <!--android:id="@+id/stopAlarmAt10"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/stopAlarm"-->
    <!--android:background="@drawable/bgbtnguide"-->
    <!--android:text="@string/stop_alarm_at_10_30"-->
    <!--android:textColor="@android:color/white" />-->

</RelativeLayout>
