<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".Wave.Wave">

    <com.smartsoftwaresolutions.rosary2.Wave.WaveView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colorChoice"
        android:layout_marginTop="85dp" />


<!--<SeekBar-->
    <!--android:id="@+id/seekBar"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignTop="@+id/border"-->
    <!--android:layout_alignBottom="@+id/border"-->
    <!--android:layout_below="@+id/shape"-->
    <!--android:layout_toEndOf="@+id/border"-->
    <!--android:layout_toRightOf="@+id/border"-->
    <!--android:max="50"-->
    <!--android:progress="10"/>-->

<!--<TextView-->
    <!--android:id="@+id/border"-->
    <!--android:layout_width="60dp"-->
    <!--android:layout_height="32dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:layout_below="@+id/shape"-->
    <!--android:text="@string/border"/>-->
    <Button
        android:id="@+id/tv_counter_4"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/shapeChoice"
        android:layout_toRightOf="@+id/shapeChoice"
        android:background="@drawable/line_square_gold"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/shape"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/shape"
        android:textColor="@color/three" />

    <RadioGroup
        android:id="@+id/shapeChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/shape"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/shape"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/shape">

        <RadioButton
            android:id="@+id/shapeCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/circle"
            android:textColor="@color/three" />

        <RadioButton
            android:id="@+id/shapeSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/square"
            android:textColor="@color/three"
            android:layout_marginStart="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/color"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_below="@+id/shape"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:text="@string/color"
        android:textColor="@color/three" />

    <RadioGroup
        android:id="@+id/colorChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/color"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="-35dp"
        android:layout_toEndOf="@+id/color"
        android:layout_toRightOf="@+id/color"
        android:orientation="horizontal">

        <!--<RadioButton-->
        <!--android:id="@+id/colorDefault"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checked="true"-->
        <!--android:text="@string/defaultColor"/>-->

        <!--<RadioButton-->
        <!--android:id="@+id/colorRed"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:textColor="@color/red"-->
        <!--android:text="@string/red"/>-->

        <RadioButton
            android:id="@+id/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/green"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="16dp" />

        <RadioButton
            android:id="@+id/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/blue"
            android:textColor="@color/three"
            android:layout_marginStart="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_wave"
        android:layout_width="384dp"
        android:layout_height="65dp"
        android:layout_below="@+id/color"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/three"
        android:textSize="20sp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8537373371656761/2056587433"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
</RelativeLayout>